fixed spacing on footer

--- a/styles.css
+++ b/styles.css
@@ -182,5 +182,5 @@ input:focus
 }
 .kevan
 {
-    margin-top: 200px;
+    margin-top: 100px;
 }
